# libindrome

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
demo/: CMakeLists.txt
demo/planarpose/: CMakeLists.txt  planarpose.cpp
inc/indrome/: algo.h  util.h
indrome/: CMakeLists.txt
indrome/core/inc/indrome/: util.h  video.h
indrome/core/src/: algo.cpp  util.cpp
indrome/inc/indrome/: io.h  util.h
indrome/pose/: CMakeLists.txt
indrome/pose/inc/indrome/pose/: simple_velocity.h
indrome/pose/src/: simple_velocity.cpp
indrome/rpc/: CMakeLists.txt
indrome/rpc/grpc/: CMakeLists.txt  frame.proto  pose.proto
indrome/rpc/inc/: client.h  service.h
indrome/rpc/src/: client.cpp  service.cpp
indrome/src/: io.cpp
samples/: CMakeLists.txt
samples/orbmatcher/: CMakeLists.txt  orbmatcher.cpp
src/: algo.cpp  util.cpp  video.cpp
test/: CMakeLists.txt  test_algo.cpp  test_io.cpp  test_util.cpp
tools/: CMakeLists.txt
tools/baw/: CMakeLists.txt  baw.cpp
tools/catimg/: .catvid.cpp.swp  CMakeLists.txt  catimg.cpp
tools/catvid/: CMakeLists.txt  catvid.cpp
tools/chesscalib/: CMakeLists.txt  chesscalib.cpp
tools/invk/: CMakeLists.txt  invk.cpp
tools/lsvideo/: CMakeLists.txt  lsvideo.cpp
tools/orbmatcher/: orbmatcher.cpp
tools/poseserver/: CMakeLists.txt  poseserver.cpp  poseviewer.cpp
tools/resizevid/: CMakeLists.txt  resizevid.cpp
tools/show_default_capture/: CMakeLists.txt  show_default_capture.cpp
tools/showimg/: CMakeLists.txt  showimg.cpp
tools/showvid/: CMakeLists.txt  showvid.cpp
tools/udct/: CMakeLists.txt  udct.cpp
